@@ -298,7 +298,7 @@ Debug.println("nextAnchor: " + nextAnchor);
 
     /** Sort by artist name */
     static class MyComparator3 implements Comparator<TitleUrl3> {
-        String artist;
+        final String artist;
         MyComparator3(String artist) {
             this.artist = artist.toUpperCase();
         }
@@ -310,7 +310,7 @@ Debug.println("nextAnchor: " + nextAnchor);
 
     /** Sort by title of work */
     static class MyComparator4 implements Comparator<TitleUrl4> {
-        String name;
+        final String name;
         MyComparator4(String name) {
             this.name = name.toUpperCase();
         }
@@ -428,10 +428,10 @@ Debug.println("too many errors: " + errorCount);
         enum Probability {
             RESULT, RESULTa, RESULTn, RESULTp, MAYBEa, MAYBEn, NONE
         }
-        Probability probability;
-        String artist;
-        String title;
-        String composer;
+        final Probability probability;
+        final String artist;
+        final String title;
+        final String composer;
         Result(String artist, String title, String composer, Probability probability) {
             this.artist = artist;
             this.title = title;
@@ -444,9 +444,9 @@ Debug.println("too many errors: " + errorCount);
     }
 
     static class Result2 extends Result {
-        String artist2;
-        String title2;
-        int index;
+        final String artist2;
+        final String title2;
+        final int index;
         Result2(String artist, String title, String composer, Probability probability, int index, String artist2, String title2) {
             super(artist, title, composer, probability);
             this.artist2 = artist2;
@@ -469,7 +469,7 @@ Debug.println("too many errors: " + errorCount);
         List<TitleUrl> urls = WebScraper.Util.scrape(TitleUrl.class, artist, title);
         if (!urls.isEmpty()) {
             sleep();
-            result.add(new Result(artist, title, getComposer(urls.get(0).url), Result.Probability.RESULT));
+            result.add(new Result(artist, title, getComposer(urls.getFirst().url), Result.Probability.RESULT));
             return result;
         }
 
@@ -481,7 +481,7 @@ Debug.println("too many errors: " + errorCount);
             List<TitleUrl> urls2 = WebScraper.Util.scrape(TitleUrl.class, normalizedArtist, title);
             if (!urls2.isEmpty()) {
                 sleep();
-                result.add(new Result(artist, title, getComposer(urls2.get(0).url), Result.Probability.RESULTa));
+                result.add(new Result(artist, title, getComposer(urls2.getFirst().url), Result.Probability.RESULTa));
                 return result;
             }
         }
@@ -501,7 +501,7 @@ Debug.println("too many errors: " + errorCount);
         List<TitleUrl> urls3 = WebScraper.Util.scrape(TitleUrl.class, normalizedArtist, normalizedName);
         if (!urls3.isEmpty()) {
             sleep();
-            result.add(new Result(artist, title, getComposer(urls3.get(0).url), Result.Probability.RESULTn));
+            result.add(new Result(artist, title, getComposer(urls3.getFirst().url), Result.Probability.RESULTn));
             return result;
         }
 
